src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>ByContractAnnualWorkingHours__c</fullName>
        <formula>2024</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Horas anuales por contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ByContractMonthlyWorkingHours__c</fullName>
        <description>Hours per month excluding weekends</description>
        <formula>((( FLOOR ( ( DATE ( YEAR (DATE (YEAR(TODAY()),MONTH(TODAY()),28)+5), 
MONTH(DATE (YEAR(TODAY()),MONTH(TODAY()),28)+5), 1 ) - 1 - DATE (1900,01,07) ) / 7 ) *5 ) 
+ MIN ( 5, MOD ( DATE ( YEAR (DATE (YEAR(TODAY()),MONTH(TODAY()),28)+5), 
MONTH(DATE (YEAR(TODAY()),MONTH(TODAY()),28)+5), 1 ) - 1 - DATE (1900,01,07), 7 ) ) 
) - 
(( FLOOR ( ( DATE(YEAR(TODAY()),MONTH(TODAY()),1) - DATE (1900,01,07) ) / 7 ) *5 ) 
+ MIN ( 5, MOD ( DATE(YEAR(TODAY()),MONTH(TODAY()),1) - DATE (1900,01,07), 7 ) ) 
)) * 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Horas mensuales por contrato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyId__c</fullName>
        <label>Id de Empresa</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CurrentGeolocation__c</fullName>
        <label>Ubicación actual</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>CurrentLinkedHeadquarters__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sede asociada</label>
        <referenceTo>Headquarters__c</referenceTo>
        <relationshipLabel>Empleados</relationshipLabel>
        <relationshipName>Empleados</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DailyWage__c</fullName>
        <formula>CASE( MONTH(TODAY()) ,
1, MonthlyWage__c/31,
3, MonthlyWage__c/31,
4, MonthlyWage__c/30,
5, MonthlyWage__c/31,
6, MonthlyWage__c/30,
7, MonthlyWage__c/31,
8, MonthlyWage__c/31,
9, MonthlyWage__c/30,
10,MonthlyWage__c/31,
11,MonthlyWage__c/30,
12,MonthlyWage__c/31,
MonthlyWage__c/28)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salario diario</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EmployeeBusinessHoursId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Horario de empleado</label>
        <referenceTo>EmployeeBusinessHours__c</referenceTo>
        <relationshipLabel>Empleados</relationshipLabel>
        <relationshipName>Empleados</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmployeeEmail__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email del empleado</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <formula>LinkedUser__r.FirstName  &amp; &quot; &quot; &amp;  LinkedUser__r.LastName</formula>
        <label>Nombre completo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HourlyWage__c</fullName>
        <formula>DailyWage__c / 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salario por hora</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InCompany__c</fullName>
        <formula>LinkedUser__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>En activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Categoría profesional</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Usuario vinculado</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Empleados</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>Teléfono móvil</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MonthlyWage__c</fullName>
        <label>Salario mensual</label>
        <precision>9</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PersonalAbsencesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ausencia</label>
        <referenceTo>PersonalAbsences__c</referenceTo>
        <relationshipLabel>Empleados</relationshipLabel>
        <relationshipName>Empleados</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Empleado</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Número de empleado</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Empleados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>